achievements: timeline: fix text overflow on mobile

--- a/app/achievements/achievements.module.css
+++ b/app/achievements/achievements.module.css
@@ -27,7 +27,7 @@
   --element-height: 10rem;
   --timeline-height: calc(100vh - var(--navbar-height) - var(--h1-height));
 
-  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   gap: 1rem;
   padding: 0rem 4vw 0rem 4vw;
 }
